Diagram Designer Item selection and alignment fixes (#1347)
* Fixes #745 selected items get higher z-index

* Fixes #862 SVG decorator is aligned by icon and not text.
Fix replaceable dbl-click for svg-decorator.

--- a/src/client/decorators/SVGDecorator/PartBrowser/SVGDecorator.PartBrowserWidget.scss
+++ b/src/client/decorators/SVGDecorator/PartBrowser/SVGDecorator.PartBrowserWidget.scss
@@ -5,4 +5,9 @@
 
 .part {
   @include svg_decorator_core;
+  .svg-decorator {
+    .name {
+      max-width: 140px;
+    }
+  }
 }
